<resources>
    <string name="app_name">PetSnap</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="birthday_yyyy_mm_dd">Birthday (YYYY-MM-DD)</string>
    <string name="bio">Bio</string>
    <string name="select_avatar">Select avatar</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="profile">Profile</string>
    <string name="title_profile">Profile</string>
    <string name="title_search">Search</string>
    <string name="title_friends">Friends</string>
    <string name="avatar">Avatar</string>
    <string name="comment">Comment</string>
    <string name="like">Like</string>
    <string name="post_image">Post image</string>
    <string name="post_text">Post Text</string>
    <string name="comment_text">Comment text</string>
    <string name="create_post">Create post</string>
    <string name="take_photos">Take photos</string>
    <string name="select_from_album">Select From Album</string>
    <string name="cancel">Cancel</string>
    <string name="follow">Follow</string>
    <string name="following">Following</string>
</resources>