<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home_logo"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/magnifying_glass_black"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_create"
        android:icon="@drawable/new_post"
        android:title="Post" />

    <item
        android:id="@+id/navigation_friends"
        android:icon="@drawable/friendship"
        android:title="@string/title_friends" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile"
        android:title="@string/title_profile" />

</menu>