<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".ui.register.RegisterActivity"
    android:padding="10dp"
    android:background="@drawable/app_background">

<!--    <ImageView-->
<!--        android:id="@+id/app_name"-->
<!--        android:layout_width="220dp"-->
<!--        android:layout_height="48dp"-->
<!--        android:background="@drawable/petsnap"-->
<!--        android:layout_marginLeft="16dp"-->
<!--        android:layout_marginTop="8dp"-->
<!--        />-->

<!--    <ImageView-->
<!--        android:id="@+id/app_icon"-->
<!--        android:layout_width="55dp"-->
<!--        android:layout_height="55dp"-->
<!--        android:background="@mipmap/logo_vector"-->
<!--        android:layout_marginLeft="300dp"-->
<!--        android:layout_marginBottom="30dp"-->
<!--        android:layout_marginTop="-50dp"/>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:padding="10dp">

        <EditText
            android:id="@+id/reg_username"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:background="@color/light_gray"
            android:hint="@string/username"
            android:inputType="text"
            android:padding="15dp" />

        <EditText
            android:id="@+id/reg_password"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:layout_marginVertical="10dp"
            android:background="@color/light_gray"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="15dp" />

        <EditText
            android:id="@+id/reg_birthday"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:background="@color/light_gray"
            android:hint="@string/birthday_yyyy_mm_dd"
            android:inputType="date"
            android:padding="15dp" />

        <EditText
            android:id="@+id/reg_bio"
            android:layout_width="match_parent"
            android:layout_height="109dp"
            android:layout_marginVertical="10dp"
            android:background="@color/light_gray"
            android:hint="@string/bio"
            android:inputType="textMultiLine"
            android:lines="3"
            android:padding="15dp" />

        <ImageView
            android:id="@+id/reg_avatar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_avatar" />

        <Button
            android:id="@+id/reg_select_file_button"
            android:layout_width="180dp"
            android:layout_height="68dp"
            android:layout_gravity="start"
            android:backgroundTint="@color/hunter_green"
            android:text="@string/select_avatar" />

        <Button
            android:id="@+id/reg_button"
            android:layout_width="180dp"
            android:layout_height="68dp"
            android:layout_gravity="end"
            android:layout_marginTop="-68dp"
            android:backgroundTint="@color/red"
            android:text="@string/register" />
    </LinearLayout>

</LinearLayout>