<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_marginBottom="15dp">

    <ImageView
        android:id="@+id/post_avatar"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:contentDescription="@string/avatar"
        android:scaleType="center"
        android:src="@drawable/baseline_pets_24" />

    <TextView
        android:id="@+id/post_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-50dp"
        android:layout_marginStart="70dp"
        android:text="@string/username"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/post_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/post_text"
        android:layout_marginStart="70dp"
        android:layout_marginTop="5dp"
        android:textSize="14sp"/>

    <ImageView
        android:id="@+id/post_imageView"
        android:layout_width="match_parent"
        android:layout_height="254dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_dashboard_black_24dp"
        android:contentDescription="@string/post_image"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/post_like"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/like"
            android:src="@drawable/baseline_favorite_border_24"
            app:tint="@android:color/black" />

        <TextView
            android:id="@+id/likes_count"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="8dp"
            android:gravity="center_vertical"
            android:text="10"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/post_comment"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/comment"
            android:src="@android:drawable/ic_menu_edit"
            app:tint="@android:color/black" />

        <TextView
            android:id="@+id/comments_count"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="8dp"
            android:gravity="center_vertical"
            android:text="10"
            android:textSize="14sp" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/comment_rv_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="80dp"
        tools:listitem="@layout/rv_comment_section"
        android:visibility="gone"
        />

        <EditText
            android:id="@+id/add_comment_text"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:minHeight="30dp"
            android:layout_marginTop="10dp"
            android:hint="add a comment"
            android:textSize="14sp"
            android:visibility="gone"/>

        <Button
            android:id="@+id/comment_send_button"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="-48dp"
            android:layout_gravity="end"
            android:text="Send"
            android:backgroundTint="@color/hunter_green"
            android:visibility="gone"/>

</LinearLayout>
