<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".ui.login.LoginActivity"
    android:padding="10dp"
    android:background="@drawable/app_background">


<!--    <ImageView-->
<!--        android:id="@+id/app_name"-->
<!--        android:layout_width="220dp"-->
<!--        android:layout_height="48dp"-->
<!--        android:background="@drawable/petsnap"-->
<!--        android:layout_marginLeft="16dp"-->
<!--        android:layout_marginTop="8dp"-->
<!--        />-->

<!--    <ImageView-->
<!--        android:id="@+id/app_icon"-->
<!--        android:layout_width="55dp"-->
<!--        android:layout_height="55dp"-->
<!--        android:background="@mipmap/logo_vector"-->
<!--        android:layout_marginLeft="300dp"-->
<!--        android:layout_marginTop="-50dp"/>-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:padding="10dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:textAlignment="center"
            android:text="Welcome to PetSnap!"
            android:layout_marginVertical="10dp"/>

        <EditText
            android:id="@+id/login_username"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:layout_marginVertical="10dp"
            android:background="@color/light_gray"
            android:hint="@string/username"
            android:inputType="text"
            android:padding="15dp" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:background="@color/light_gray"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginVertical="10dp"
            android:padding="15dp" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="180dp"
            android:layout_height="68dp"
            android:backgroundTint="@color/hunter_green"
            android:text="Log In" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="180dp"
            android:layout_height="68dp"
            android:layout_gravity="end"
            android:layout_marginTop="-68dp"
            android:backgroundTint="@color/red"
            android:text="@string/register" />
    </LinearLayout>

</LinearLayout>